# improved_shot_detection

./: .gitignore  CMakeLists.txt  accessDirectory.h  calc_block_histogram.cpp  cut_detection_functions.cpp  example_template_matching.cpp  improved_shot_detection.cpp  improved_shot_detection_functions.h  main.cpp  test_calc_template_matching_diff.cpp
